# Y2S2-DA-Pallet-Optimizer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pallet_optimizer
docs/: Doxyfile.in
src/: CMakeLists.txt  Doxyfile  knapsack_solver.py  main.cpp  performance_visualizer.py
src/data/: DataManager.cpp  DataManager.h
src/menu/: Menu.cpp  Menu.h
src/optimizer/: PalletPackingOptimizer.cpp  PalletPackingOptimizer.h
